[package]
name = "pixel-pi"
version = "0.1.0"
authors = ["runner"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
#bigdecimal = "0.3.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "convert"
path = "src/convert.rs"

[[bin]]
name = "count"
path = "src/count.rs"
